syntax = "proto3";

import "google/protobuf/empty.proto";

package v1.ha_cluster_agent;

// Service for managing cluster-agent rpc calls
service HaClusterRpc {
  rpc RegisterNodeAgent (HaNodeInfo) returns (google.protobuf.Empty) {}
  rpc ReportFailedNvmePaths (ReportFailedNvmePathsRequest) returns (FailedNvmePathsResponse) {}
}

// Node information
message HaNodeInfo {
    string nodename = 1;
    string endpoint = 2;
}

// Failed NVMe path.
message FailedNvmePath {
  // NQN of the NVMe target to which this path is connected.
  string target_nqn = 1;
}

// Failed paths message.
message ReportFailedNvmePathsRequest {
  // Node which reports failed paths.
  string nodename = 1;
  // Grpc node endpoint.
  string endpoint = 2;
  // List of failed
  repeated FailedNvmePath failed_paths = 3;
}

// Failed paths reporting.
message FailedNvmePathsResponse {
  // List of failed paths.
  // If reporting completely succeeded then no path is returned.
  repeated FailedNvmePathResponse failed_paths = 1;
}

// Reporting of each path.
message FailedNvmePathResponse {
  // gRPC Code of the path reporting.
  int32 status_code = 1;
  // The NQN of this path.
  string failed_nqn = 2;
}